# rplidar

./: 2020-04-25-16-08-54.bag  2020-04-25-16-11-41.bag  name
devel/: .catkin  local_setup.sh
devel/include/: ui_image_view.h
devel/include/image_proc/: CropDecimateConfig.h  DebayerConfig.h  RectifyConfig.h  ResizeConfig.h
devel/include/image_view/: ImageViewConfig.h
devel/include/pcl_ros/: MLSConfig.h
devel/include/service_example/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h
devel/include/stereo_image_proc/: DisparityConfig.h
devel/lib/base_controller/: base_controller
devel/lib/camera_image/: camera_pub
devel/lib/double/: find_second  find_target_double  movement
devel/lib/gaitech_edu/: free_space_navigation_node  listener_node  map_navigation_node  talker_node  voice_teleop_node
devel/lib/hector_compressed_map_transport/: map_to_image_node
devel/lib/hight_read/: hight_read
devel/lib/image_proc/: image_proc
devel/lib/image_publisher/: image_publisher
devel/lib/image_rotate/: image_rotate
devel/lib/image_view/: disparity_view  extract_images  image_saver  image_view  video_recorder
devel/lib/librviz_tutorial/: myviz
devel/lib/msg/: msg
devel/lib/mul_t/: mul_t
devel/lib/pcl_ros/: convert_pcd_to_image  pcd_to_pointcloud
devel/lib/pkgconfig/: base_controller.pc  (+48 more)
src/: readme  ros-kinetic-test3_0.1.0-0xenial_amd64.deb
src/base_controller/: CMakeLists.txt
src/double/: CMakeLists.txt  find_axis _double.cpp  find_second.cpp  movement.cpp  point_find.launch
src/followbot/: follower_blind.py  follower_color_filter.py  follower_p.py
src/hight_read/: CMakeLists.txt  hight_read.cpp
src/rosopencv/: CMakeLists.txt  package.xml  rosopencv.cpp
src/save_points/: CMakeLists.txt  save.launch  save_points.cpp
src/save_points/debian/: changelog  control  rules
src/service_example/: CMakeLists.txt
src/stereo_vision-master/: CMakeLists.txt
src/test3/: CMakeLists.txt
src/test3/debian/: changelog  control  debhelper-build-stamp  files  ros-kinetic-test3.substvars  rules
src/test3/debian/ros-kinetic-test3/DEBIAN/: control  md5sums
src/test3/debian/ros-kinetic-test3/opt/ros/kinetic/lib/pkgconfig/: test3.pc
src/test3/debian/ros-kinetic-test3/opt/ros/kinetic/lib/test3/: test3
src/test3/debian/ros-kinetic-test3/opt/ros/kinetic/share/test3/cmake/: test3Config.cmake
src/test3/include/test3/: main_window.hpp  qnode.hpp
src/test3/obj-x86_64-linux-gnu/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  ui_main_window.h
src/test3/obj-x86_64-linux-gnu/atomic_configure/: local_setup.sh
src/test3/obj-x86_64-linux-gnu/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/test3/obj-x86_64-linux-gnu/devel/: .catkin  .rosinstall  setup.sh
src/test3/obj-x86_64-linux-gnu/devel/lib/pkgconfig/: test3.pc
src/test3/obj-x86_64-linux-gnu/devel/share/test3/cmake/: test3Config.cmake
src/test3/obj-x86_64-linux-gnu/gtest/: Makefile  cmake_install.cmake
src/test3/obj-x86_64-linux-gnu/gtest/gtest/: Makefile
src/test3/obj-x86_64-linux-gnu/include/test3/: moc_main_window.cpp  moc_main_window.cpp_parameters  moc_myviz.cpp  moc_myviz.cpp_parameters  moc_qnode.cpp  moc_qnode.cpp_parameters
src/test3/obj-x86_64-linux-gnu/resources/: images.qrc.depends
src/test3/src/: main_window.cpp  myviz.cpp  qnode.cpp
src/test3/ui/: main_window.ui
src/try/: CMakeLists.txt  find_axis.cpp
(+103 files in other folders)
